# genai-social-media-release

./: .gitignore  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
figures/: conversation.eps  feedback.eps  suggestions.eps
scripts/classification/: chat_classify.py  conversation_classify.py  feedback_classify.py
scripts/classification/categories/: chat_subcategories_description.json  chat_topics_description.json  conversation_starter_categories_descriptions.json  feedback_categories_description.json
scripts/plotting/: plot_1-filtered.py  plot_1_portrait.py  why_plot.py
src/genai-social-media/: config.py
src/genai-social-media/dashboard/: chat.py  conversation.py  engagement_analytics.py  feedback.py  filters.py  perception_behaviour.py  players-paper.py  players.py  rounds_game.py  runner.py  suggestions.py  topics.py
src/genai-social-media/dashboard/engagement_helpers/: page_elements.py  parsers.py  visuals.py
src/genai-social-media/dashboard/players_helpers/: ate.py
src/genai-social-media/dashboard/rounds_helpers/: parsers.py  visuals.py
src/genai-social-media/dashboard/topics_helpers/: metrics.py  visuals.py
src/genai-social-media/dashboard/treatments/: conversation_tree_for_regression.py  parsers.py  seed_content.json  suggestions_visuals.py  treatment_info.py
