[tool.poetry]
name = "genai-social-media-release"
version = "1.0.0"
description = "Analysis code for 'The Impact of Generative AI on Social Media: An Experimental Study' (Nature Scientific Reports)"
authors = ["Anders Giovanni Møller <andersgiovanni@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/AndersGiovanni/genai-social-media-release"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
numpy = "2.1.0"
pandas = "2.2.2"
scikit-learn = "1.5.1"
scipy = "1.14.1"
torch = "2.4.0"
matplotlib = "3.9.2"
python-dotenv = "1.0.1"
seaborn = "0.13.2"
huggingface = "0.0.1"
streamlit = "1.37.1"
plotly = "5.23.0"
datetime = "5.5"
watchdog = "4.0.2"
altair = "5.4.0"
appnope = "0.1.4"
asttokens = "2.4.1"
attrs = "24.2.0"
blinker = "1.8.2"
cachetools = "5.5.0"
certifi = "2024.7.4"
charset-normalizer = "3.3.2"
click = "8.1.7"
comm = "0.2.2"
contourpy = "1.2.1"
cycler = "0.12.1"
debugpy = "1.8.7"
decorator = "5.1.1"
executing = "2.1.0"
filelock = "3.15.4"
fonttools = "4.53.1"
fsspec = "2024.6.1"
gitdb = "4.0.11"
gitpython = "3.1.43"
huggingface-hub = "0.26.2"
idna = "3.7"
ipykernel = "6.29.5"
ipython = "8.28.0"
jedi = "0.19.1"
jinja2 = "3.1.4"
joblib = "1.4.2"
jsonschema = "4.23.0"
jsonschema-specifications = "2023.12.1"
jupyter-client = "8.6.3"
jupyter-core = "5.7.2"
kiwisolver = "1.4.5"
levenshtein = "0.26.1"
markdown-it-py = "3.0.0"
markupsafe = "2.1.5"
matplotlib-inline = "0.1.7"
mdurl = "0.1.2"
mpmath = "1.3.0"
narwhals = "1.5.2"
nest-asyncio = "1.6.0"
networkx = "3.3"
nltk = "3.9.1"
packaging = "24.1"
parso = "0.8.4"
pexpect = "4.9.0"
pillow = "10.4.0"
platformdirs = "4.3.6"
prompt-toolkit = "3.0.48"
protobuf = "5.27.3"
psutil = "6.1.0"
ptyprocess = "0.7.0"
pure-eval = "0.2.3"
py-readability-metrics = "1.4.5"
pyarrow = "17.0.0"
pydeck = "0.9.1"
pygments = "2.18.0"
pyparsing = "3.1.2"
python-dateutil = "2.9.0.post0"
pytz = "2024.1"
pyyaml = "6.0.2"
pyzmq = "26.2.0"
rapidfuzz = "3.10.1"
referencing = "0.35.1"
regex = "2024.9.11"
requests = "2.32.3"
rich = "13.7.1"
rpds-py = "0.20.0"
safetensors = "0.4.5"
six = "1.16.0"
smmap = "5.0.1"
stack-data = "0.6.3"
sympy = "1.13.2"
tenacity = "8.5.0"
threadpoolctl = "3.5.0"
tokenizers = "0.20.1"
toml = "0.10.2"
tornado = "6.4.1"
tqdm = "4.66.6"
traitlets = "5.14.3"
transformers = "4.46.1"
typing-extensions = "4.12.2"
tzdata = "2024.1"
urllib3 = "2.2.2"
wcwidth = "0.2.13"
zope-interface = "7.0.1"
streamlit-option-menu = "^0.4.0"
statsmodels = "^0.14.6"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
